--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta name="author" content="Nathaniel Susabda">
   <link rel="Icon" type="image/x-icon" href="/images/linkImage.png">
   <title>First Meeting Minute</title>
+  <link rel = "stylesheet" href="style.css">
 </head>
   <body>
     <main>
@@ -19,14 +20,14 @@
     </nav>
   </main>
     <section>
-    <div id="Ideas_Discussed">
+    <div id="Ideas_Discussed" class="secondBox">
       <h2>Ideas Discussed in the meeting</h2>
       <p>In the next meeting we will implement the <b> <span><i>sound</i></span>, <span><i>images</i></span>, and <span><i>videos</i></span> </b>into our website.<br>
       This link might be useful for the next meeting</p><a href="https://www.w3schools.com/html/html5_video.asp" target="_blank"> <strong> <em>Click this link</em></strong></a>
     </div>
   </section>
   <hr>
-    <div id="Check_Ins">
+    <div id="Check_Ins" class="box">
       <h2>Check Ins</h2>
       <h3>Attendance:</h3>
       <ul>
@@ -70,6 +71,45 @@
     </figure>
     </div>
     <br>
+    <h2>Goals for next meeting:</h2>
+    <div class="boxes">
+      <div class="box1">
+        <h3>1st Goal</h3>
+        <p>Finish all the designs for the website</p>
+
+      </div>
+      <div class="box2">
+        <h3>2nd Goal</h3>
+        <p>Create some animations in the website</p>
+      </div>
+      <div class="box3">
+        <h3>3rd Goal</h3>
+        <p>Make the website more interactive</p>
+      </div>
+    </div>
+
+    <div class="grid_cont">
+      <div class="gridHead">
+        <h2>Best ideas in this meeting</h2>
+      </div>
+      <div class="gridItem">
+        <p>Idea</p>
+      </div>
+      <div class="grid1">
+        <p>The idea to add animation</p>
+      </div>
+      <div class="grid2">
+        <p>The implementation of video on webpages</p>
+      </div>
+      <div class="grid3">
+        <p>Idea to include links on website</p>
+      </div>
+    </div>
+
+    <div>
+      <p id="prac1"> Please fill out the form below </p>
+    </div>
+
     <fieldset>
     <h3>Form</h3>
     <form method="get">
@@ -111,7 +151,7 @@
             <option value="no">no</option>
         </select>
       </div>
-      <button>Submit</button>
+      <button class="btn">Submit</button>
     </form>
   </fieldset>
   <footer>The end of the website</footer>
