--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
       </div>
     </div>
 
+    <h3 id="comb" class="yey">The next meeting should be better</h3>
+
     <div>
       <p id="prac1"> Please fill out the form below </p>
     </div>
